<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dp" >

    <TextView
        android:id="@+id/title"
        style="@style/I99DialogStyle_Title"
        android:text="@string/i99_option" />

    <Button
        android:id="@+id/group_contact"
        style="@style/I99DialogStyle_Button"
        android:text="@string/i99_title_group"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/i99_list_one_item_bg"/>
    
    <Button
        android:id="@+id/select"
        style="@style/I99DialogStyle_Button"
        android:text="@string/i99_delete_contact"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/i99_list_one_item_bg"/>
    
</LinearLayout>