<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <!-- 标题 -->

    <TextView
        android:id="@+id/title"
        style="@style/option_dialog_title"
        android:text="@string/gprs_open_confirm_title" />

    <TextView
        android:id="@+id/titleconfirm"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="27sp"
        android:singleLine="false"
        android:textColor="@android:color/white"
        android:text="@string/gprs_open_confirm_message" />
<!-- style="@style/option_dialog_title" -->
    <!-- 确定/ 取消 -->

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dialog_margin"
        android:layout_marginLeft="@dimen/dialog_margin"
        android:layout_marginRight="@dimen/dialog_margin"
        android:layout_marginTop="14dp"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/dialog_cancel"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:text="@string/dialog_cancel"
            android:textColor="@android:color/white"
            android:textSize="35.0sp" />

        <Button
            android:id="@+id/dialog_confirm"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:text="@string/dialog_confirm"
            android:textColor="@android:color/white"
            android:textSize="35.0sp" />
    </LinearLayout>

</LinearLayout>