<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/menu_bg"
    android:id="@+id/menu" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/action_settings"
        android:textColor="?attr/title_font_color"
        android:textSize="?attr/title_font_size"
        />

    <Button
        android:id="@+id/action_remove"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/uninstall_app"
        android:textSize="?attr/title_font_size"
        android:background="@drawable/menu_button_bg"
        />

    <Button
        android:id="@+id/action_show"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/total"
        android:textSize="?attr/title_font_size"
        android:background="@drawable/menu_button_bg"
        />

</LinearLayout>
