<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="150dp"
    android:background="#fff5f5f5"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:textSize="30sp"
        android:background="#00ffffff"
        android:textColor="#ff000000"
        android:gravity="center_horizontal"
        android:text="@string/dlg_add" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:layout_weight="1"
        android:text="@string/dlg_ok"
        />
    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:layout_weight="1"
        android:text="@string/dlg_cancel"
        />
    </LinearLayout>

   
</LinearLayout>

