<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="150dp"
    android:background="#fff5f5f5"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:background="#00ffffff"
        android:gravity="center_horizontal"
        android:text="@string/dlg_remove"
        android:textColor="#ff000000"
        android:textSize="30sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dlg_ok"
            android:layout_weight="1"
            android:textSize="30sp" />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/dlg_cancel"
            android:textSize="30sp" />
    </LinearLayout>

</LinearLayout>
