<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#f5f5f5"
    android:orientation="vertical" >

    <include layout="@layout/titlelayout_style_cancel_title_option" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/ruyi_margin_double"
                android:text="@string/help_notes_info1"
                android:textColor="@android:color/black"
                android:textSize="30.0sp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/ruyi_margin_double"
                android:text="@string/help_notes_info2"
                android:textColor="@android:color/black"
                android:textSize="30.0sp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/ruyi_margin_double"
                android:text="@string/help_notes_info3"
                android:textColor="@android:color/black"
                android:textSize="30.0sp" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>